# avo

./: Cargo.toml  README.md  justfile
apply-progress/src/: lib.rs
apply-stdio/: Cargo.toml
apply-stdio/src/: lib.rs
avo/: Cargo.toml
avo-vm/: Cargo.toml  README.md
avo-vm/src/: cli.rs  main.rs  qemu.rs  runner.rs  ssh.rs  utils.rs  vm_images.rs
avo/examples/: demo.rs  multi.rs  simple.rs
avo/src/: lib.rs  operation.rs  params.rs  parser.rs  plan.rs  store.rs  system.rs
causality/: Cargo.toml
causality/src/: epoch.rs  lib.rs  tree.rs
cmd/: Cargo.toml
cmd/src/: lib.rs
ctx/: Cargo.toml
ctx/src/: lib.rs  paths.rs
env/: Cargo.toml
env/src/: lib.rs
examples/: demo.avo  ludis.toml  lusid.toml  multi.avo  multi.ludis  multi.lusid  simple.avo  simple.ludis  simple.lusid
flow/: Cargo.toml
flow/src/: epoch.rs  id.rs  lib.rs
fs/: Cargo.toml
fs/src/: lib.rs
http/: Cargo.toml
http/src/: lib.rs
ludis/: Cargo.toml
ludis-apply/: Cargo.toml
ludis-apply/src/: main.rs
ludis/examples/: multi.rs  simple.rs
ludis/src/: config.rs  lib.rs  machines.rs  main.rs
lusid/: Cargo.toml
lusid-apply/: Cargo.toml
lusid-apply/src/: lib.rs  main.rs
lusid/examples/: multi.rs  simple.rs
lusid/src/: config.rs  lib.rs  main.rs  tui.rs
machine/: Cargo.toml
machine/src/: arch.rs  hardware.rs  lib.rs  os.rs
operation/: Cargo.toml
operation/src/: epoch.rs  lib.rs  spec.rs  traits.rs
operation/src/operations/: apt.rs  file.rs
operation/src/ops/: apt.rs  package.rs
params/: Cargo.toml
params/src/: lib.rs
plan/: Cargo.toml
plan/src/: core.rs  eval.rs  id.rs  lib.rs  load.rs  model.rs  parse.rs  plan.rs  tree.rs
resource/: Cargo.toml
resource/src/: epoch.rs  lib.rs  spec.rs  tree.rs  type.rs
resource/src/resources/: apt.rs  file.rs
rimu-interop/: Cargo.toml
rimu-interop/src/: from_rimu.rs  lib.rs  to_rimu.rs
ssh/: Cargo.toml  README.md
ssh/src/: channel.rs  command.rs  connect.rs  keypair.rs  lib.rs  session.rs  stream.rs  sync.rs  terminal.rs
stack/: Cargo.toml
stack/examples/: readme.avo
stack/src/: block.rs  lib.rs  operation.rs  operator.rs  params.rs  parser.rs  store.rs
store/: Cargo.toml
store/src/: lib.rs
system/: Cargo.toml
system/src/: arch.rs  hardware.rs  id.rs  lib.rs  os.rs
tree/: Cargo.toml
tree/src/: lib.rs
view/: Cargo.toml
view/src/: lib.rs  render.rs  tree.rs
view/src/view/: fragment.rs  line.rs  mod.rs  paragraph.rs  span.rs  text.rs  tree.rs
vm/: Cargo.toml  README.md  images.toml
vm/examples/: demo.rs
vm/src/: cmd.rs  context.rs  emulator.rs  env.rs  fs.rs  http.rs  images.rs  lib.rs  machines.rs  paths.rs  run.rs  runs.rs  system.rs
vm/src/image/: hash.rs  index.rs  mod.rs
vm/src/images/: hash.rs  list.rs  mod.rs
vm/src/instance/: cloud_init.rs  exec.rs  handle.rs  kernel.rs  mod.rs  overlay.rs  ovmf.rs  paths.rs  run.rs  start.rs  terminal.rs
vm/src/instance/setup/: cloud_init.rs  kernel.rs  mod.rs  overlay.rs  ovmf.rs
vm/src/machines/: kernel.rs  mod.rs  overlay.rs  ovmf.rs
vm/src/prep/: kernel.rs  mod.rs  ovmf.rs
vm/src/qemu/: launch.rs  mod.rs  ovmf.rs  virtiofsd.rs
vm/src/ssh/: command.rs  connect.rs  error.rs  keypair.rs  mod.rs  port.rs  sync.rs
vm/src/utils/: escape_path.rs  get_free_tcp_port.rs  is_tcp_port_open.rs  mod.rs
