[workspace]
resolver = "3"
members = [
    "avo", "machine", "operation", "params", "plan", "rimu-interop", "store", "system", "vm",
]

[workspace.dependencies]
async-trait = "0.1.89"
directories = "6.0.0"
displaydoc = "0.2.5"
indexmap = "2.12.0"
rimu = { version = "0.2.0", git = "https://github.com/ahdinosaur/rimu" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "signal"] }
url = "2.5.7"
