[workspace]
resolver = "3"
members = ["env",
  "ludis", "ludis-apply", "machine", "operation", "params", "plan", "rimu-interop", "ssh", "store", "system", "vm",
]

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.52", features = ["derive"] }
displaydoc = "0.2.5"
indexmap = "2.12.0"
rimu = { version = "0.2.0", git = "https://github.com/ahdinosaur/rimu" }
russh = "0.54.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["indexmap"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
url = "2.5.7"
