[package]
name = "avo-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
base64ct = { version = "1.8", features = ["std", "alloc"] }
bytesize = "2.0.1"
clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
clap_complete = "4.5.48"
clap_mangen = "0.2.24"
color-eyre = "0.6.3"
comfy-table = "7.1.4"
daemonize-me = "2.0.2"
dir-lock = "0.5.0"
directories = "6.0.0"
futures = { version = "0.3.31", default-features = false }
hex = "0.4.3"
humantime = "2.2.0"
indicatif = "0.17.11"
libc = { version = "0.2.172", default-features = false }
nanoid = "0.4.0"
rattler_digest = { version = "1.1.1", features = ["tokio"] }
reqwest = "0.12.12"
russh = "0.52"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-escape = "0.1.5"
sysinfo = { version = "0.35", default-features = false, features = ["system"] }
termion = "4.0.5"
tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
tokio-fd = "0.3.0"
tokio-util = "0.7.15"
tokio-vsock = "0.7.1"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
url = "2.5.4"
vhost = { version = "0.13.0", features = ["vhost-user-frontend"] }
which = "7.0.2"
whoami = { version = "1.5.2", default-features = false }
nix = { version = "0.30.1", features = ["signal"] }
