[package]
name = "avo"
version = "0.1.0"
edition = "2024"

[dependencies]
avo-params = { path = "../params", version = "0.1" }
avo-plan = { path = "../plan", version = "0.1" }
avo-operation = { path = "../operation", version = "0.1" }
avo-store = { path = "../store", version = "0.1" }
avo-system = { path = "../system", version = "0.1" }
async-trait.workspace = true
directories.workspace = true
indexmap.workspace = true
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
serde.workspace = true
tokio.workspace = true
