[package]
name = "ludis"
version = "0.1.0"
edition = "2024"

[dependencies]
ludis-env = { path = "../env", version = "0.1" }
ludis-params = { path = "../params", version = "0.1" }
ludis-plan = { path = "../plan", version = "0.1" }
ludis-operation = { path = "../operation", version = "0.1" }
ludis-store = { path = "../store", version = "0.1" }
ludis-system = { path = "../system", version = "0.1" }
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.20" }
