[package]
name = "lusid"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-ctx = { path = "../ctx", version = "0.1" }
lusid-machine = { path = "../machine", version = "0.1" }
lusid-operation = { path = "../operation", version = "0.1" }
lusid-params = { path = "../params", version = "0.1" }
lusid-plan = { path = "../plan", version = "0.1" }
lusid-store = { path = "../store", version = "0.1" }
lusid-system = { path = "../system", version = "0.1" }
clap.workspace = true
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.9.8"
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
comfy-table = "7.2.1"
