[package]
name = "avo-plan"
version = "0.1.0"
edition = "2024"

[dependencies]
avo-params = { path = "../params", version = "0.1" }
avo-operation = { path = "../operation", version = "0.1" }
avo-store = { path = "../store", version = "0.1" }
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
url.workspace = true
