[package]
name = "ludis-plan"
version = "0.1.0"
edition = "2024"

[dependencies]
ludis-causality = { path = "../causality", version = "0.1" }
ludis-params = { path = "../params", version = "0.1" }
ludis-operation = { path = "../operation", version = "0.1" }
ludis-resource = { path = "../resource", version = "0.1" }
ludis-store = { path = "../store", version = "0.1" }
displaydoc.workspace = true
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
