[package]
name = "lusid-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-fs = { path = "../fs", version = "0.1" }
async-promise = "0.1.0"
base64ct = "1.6.0"
russh.workspace = true
russh-sftp = "2.1.1"
thiserror.workspace = true
termion = "4.0.6"
tokio.workspace = true
tracing.workspace = true
