[package]
name = "avo-stack"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
directories = "6.0.0"
indexmap = "2.12.0"
rimu = { version = "0.2.0", git = "https://github.com/ahdinosaur/rimu", branch = "url-source-id" }
tokio = { version = "1.48.0", features = ["fs"] }
url = "2.5.7"
