[package]
name = "avo-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
avo-system = { path = "../system", version = "0.1" }
avo-machine = { path = "../machine", version = "0.1" }
directories.workspace = true
reqwest = { version = "0.12.24", features = ["brotli", "gzip", "stream"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
toml = "0.9.8"
sha2 = "0.10.9"
cuid2 = "0.1.4"
which = "8.0.0"
dir-lock = "0.5.0"
base64ct = { version = "1.6.0", features = ["alloc"] }
russh = "0.54.6"
termion = "4.0.5"
tokio-vsock = "0.7.2"
tokio-util = "0.7.17"
shell-escape = "0.1.5"
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
